syntax = "proto3";

package com.road.yishi.proto.active;

message AddItemReq {
  repeated int32 reward = 1;
}
