syntax = "proto3";

package com.road.yishi.proto.active;

message GradePacketReq {
  int32 op = 1;
  int32 grade = 2;
}
