syntax = "proto3";

package com.road.yishi.proto.active;

message MonthCardReqMsg {
  int32 op = 1;
}
