syntax = "proto3";

package com.road.yishi.proto.active;

message OnlineRewardMsg {
  int32 id = 1;
  int32 itemId = 2;
  int32 num = 3;
}
