syntax = "proto3";

package com.road.yishi.proto.active;

message SevenSignReceiveReq {
  int32 site = 1;
}
