syntax = "proto3";

package com.road.yishi.proto.fund;

message GrowthFundRecReq {
  int32 grade = 1;
}
