syntax = "proto3";

package com.road.yishi.proto.player;

message SynchronizedTimeMsg {
  string sysCurtime = 1;
}
